# homeassistant-health

./: .gitattributes  .gitignore  .mise.toml  .rumdl.toml  CLAUDE.md  CONTRIBUTING.md  README.md  hacs.json  hk.pkl  repository.yaml  tasks.toml
.claude/: settings.json
.github/: dependabot.yml  zizmor.yml
.github/workflows/: actions.yml  build-app.yaml  builder.yaml  ci.yml  hacs.yml
.mise/tasks/: bump  docker-test
custom_components/: pyproject.toml
custom_components/homeassistant_health/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  models.py  sensor.py  strings.json
custom_components/homeassistant_health/translations/: en.json
dev/ha-native/: compose.yaml
dev/ha-native/health-tracker/: options.json  seed-health.sh
dev/ha-native/homeassistant/: configuration.yaml  onboard.sh  preconfig.sh
health-tracker/: .dockerignore  CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  biome.json  bunfig.toml  config.yaml  package.json  run.sh  tsconfig.json
health-tracker/src/client/: App.jsx  App.tsx  api-url.ts  api.ts  fixtures.ts  globals.d.ts  main.tsx  store.ts  styles.css  theme.ts
health-tracker/src/lib/: health.ts  schemas.ts  types.ts
health-tracker/src/server/: index.html  index.ts  native-integration-options.ts  native-integration.ts  schemas.ts  supervisor-discovery.ts  (+1 more)
health-tracker/tests/: api-url.test.ts  health.test.ts  native-integration-options.test.ts  native-integration.test.ts  supervisor-discovery.test.ts  tracker-store.test.ts
health-tracker/translations/: en.yaml
(+31 files in other folders)
