[project]
name = "homeassistant-health"
version = "0.5.0"
description = "Home Assistant Health App companion integration"
requires-python = "==3.14.2"
dependencies = [
  "homeassistant==2026.5.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff==0.15.12",
    "ty==0.0.35",
]

[tool.ruff]
src = ["homeassistant_health"]
target-version = "py314"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
